# yami

./: .gitignore  README.markdown  yami-server.asd  yami-test.asd  yami.asd
bench/: bench.lisp
js-client/: package-lock.json  package.json  test.js  webpack.config.js
js-client/src/: index.js
server/: index.html  server.lisp
src/: commands.lisp  data.lisp  find.lisp  parser.lisp  store.lisp  string.lisp  sym.lisp  yami.lisp
tests/: yami.lisp
web-client/: package-lock.json  package.json
web-client/src/: App.vue  utils.js  yami.js
web-client/src/components/: Arrow.vue  HelloWorld.vue  NetworkView.vue  text.vue  (+1 more)
yami-cl/: README.markdown  README.org
yami-cl/bench/: bench.lisp
yami-cl/js-client/: package-lock.json  package.json
yami-cl/src/: query-log.lisp  store.lisp  string.lisp  sym.lisp  yami.lisp
yami-cl/web-client/: package-lock.json  vue.config.js
yami-rs/: Cargo.toml
yami-rs/examples/: actix_server.rs  hyper_server.rs  interact.rs
yami-rs/front/: package.json  pnpm-lock.yaml
yami-rs/front/src/: config.ts  fetcher.ts  index.tsx  parse.ts  state.ts  yami-client.ts
yami-rs/front/src/components/Adder/: index.tsx
yami-rs/front/src/components/App/: App.css  App.tsx
yami-rs/front/src/components/Foldable/: index.module.scss  index.tsx
yami-rs/front/src/components/PropetyView/: index.css  index.tsx  index2.tsx
yami-rs/front/src/components/TableView/: index.tsx
yami-rs/front/src/contexts/: state.tsx
yami-rs/front/src/models/: index.ts
yami-rs/src/: core.rs  json.rs  lib.rs  main.rs  pool.rs  q.rs  script.rs  serialize.rs  store.rs
(+2 files in other folders)
