[package]
name = "yami"
version = "0.1.0"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gluten = { git = "https://github.com/carrotflakes/gluten.git", branch = "master", version = "*" }
serde_json = "1.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

actix-web = { version = "3.0", features=["rustls"] }
actix-rt = "1.1"
actix-web-actors = "3.0"
actix-cors = "0.5.4"
